// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`dashboard-grid render default 1`] = `

<div>
  <div class="flex flex-col grow bg-secondary dark:bg-black px-8 py-8">
    <div class="flex gap-2 mb-8">
      <gui-filter-search
        placeholder="Filter Projects"
        items
      >
      </gui-filter-search>
      <gui-dashboard-view-toggle currentview="grid">
      </gui-dashboard-view-toggle>
      <div style="opacity: 1;">
        <gui-dashboard-sort-toggle
          filtereditems
          sortkey="name"
        >
        </gui-dashboard-sort-toggle>
      </div>
    </div>
    <div
      class="flex flex-col"
      style="opacity: 0; transform: translateY(-5px);"
    >
      <p class="text-sm font-semibold mb-4">
        Projects
      </p>
      <div class="flex flex-row flex-wrap gap-8">
        <p>
          No projects found
        </p>
      </div>
    </div>
  </div>
</div>

`;

exports[`dashboard-grid with results 1`] = `

<div>
  <div class="flex flex-col grow bg-secondary dark:bg-black px-8 py-8">
    <div class="flex gap-2 mb-8">
      <gui-filter-search
        placeholder="Filter Projects"
        items="[object Object],[object Object]"
      >
      </gui-filter-search>
      <gui-dashboard-view-toggle currentview="grid">
      </gui-dashboard-view-toggle>
      <div style="opacity: 1;">
        <gui-dashboard-sort-toggle
          filtereditems="[object Object],[object Object]"
          sortkey="name"
        >
        </gui-dashboard-sort-toggle>
      </div>
    </div>
    <div
      class="flex flex-col"
      style="opacity: 0; transform: translateY(-5px);"
    >
      <p class="text-sm font-semibold mb-4">
        Projects
      </p>
      <div class="flex flex-row flex-wrap gap-8">
        <a
          href="#"
          class="relative w-full md:w-96 group"
        >
          <div class="relative transition-all group-hover:border-neutral-400 dark:group-hover:border-neutral-700 flex items-center border-x-[1px] border-t-[1px] bg-card rounded-t-lg h-20 overflow-hidden">
            <div class="flex px-3 py-2">
              <gui-card-title classname="text-md font-medium">
                project-bar
              </gui-card-title>
            </div>
            <div class="absolute flex flex-row px-3 py-2 backdrop-blur-[1px] rounded-sm top-0 right-0 z-[1]">
              <p class="text-[0.7rem] text-muted-foreground">
                November 1st, 2024 | 06:01 PM
              </p>
            </div>
            <div class="absolute bg-clip-content flex justify-end items-center -inset-4 -right-2 flex-row gap-2">
              <gui-package-manager-pnpm-icon classname="size-24 dark:fill-neutral-900/80 fill-neutral-200/80">
              </gui-package-manager-pnpm-icon>
            </div>
          </div>
          <div class="flex transition-all group-hover:border-b-neutral-400 dark:group-hover:border-b-neutral-700 group-hover:border-x-neutral-400 dark:group-hover:border-x-neutral-700 border-[1px] bg-card rounded-b-lg items-center py-3 px-3 w-full">
            <gui-tooltip-provider>
              <gui-tooltip>
                <gui-tooltip-trigger classname="text-muted-foreground truncate text-left text-xs">
                  ~/project-foo
                </gui-tooltip-trigger>
                <gui-tooltip-content>
                  ~/project-foo
                </gui-tooltip-content>
              </gui-tooltip>
            </gui-tooltip-provider>
          </div>
        </a>
        <a
          href="#"
          class="relative w-full md:w-96 group"
        >
          <div class="relative transition-all group-hover:border-neutral-400 dark:group-hover:border-neutral-700 flex items-center border-x-[1px] border-t-[1px] bg-card rounded-t-lg h-20 overflow-hidden">
            <div class="flex px-3 py-2">
              <gui-card-title classname="text-md font-medium">
                project-foo
              </gui-card-title>
            </div>
            <div class="absolute flex flex-row px-3 py-2 backdrop-blur-[1px] rounded-sm top-0 right-0 z-[1]">
              <p class="text-[0.7rem] text-muted-foreground">
                November 1st, 2024 | 06:01 PM
              </p>
            </div>
            <div class="absolute bg-clip-content flex justify-end items-center -inset-4 -right-2 flex-row gap-2">
              <gui-package-manager-vlt-icon classname="size-24 dark:fill-neutral-900/80 fill-neutral-200/80">
              </gui-package-manager-vlt-icon>
              <gui-runtime-node-icon classname="size-24 dark:fill-neutral-900/80 fill-neutral-200/80">
              </gui-runtime-node-icon>
            </div>
          </div>
          <div class="flex transition-all group-hover:border-b-neutral-400 dark:group-hover:border-b-neutral-700 group-hover:border-x-neutral-400 dark:group-hover:border-x-neutral-700 border-[1px] bg-card rounded-b-lg items-center py-3 px-3 w-full">
            <gui-tooltip-provider>
              <gui-tooltip>
                <gui-tooltip-trigger classname="text-muted-foreground truncate text-left text-xs">
                  ~/project-foo
                </gui-tooltip-trigger>
                <gui-tooltip-content>
                  ~/project-foo
                </gui-tooltip-content>
              </gui-tooltip>
            </gui-tooltip-provider>
          </div>
        </a>
      </div>
    </div>
  </div>
</div>

`;
